--- a/Props/src/index.css
+++ b/Props/src/index.css
@@ -32,7 +32,9 @@ body{
 .card p{
   padding: 20px;
 }
-
+.card h1{
+  color: rgb(8, 2, 33);
+}
 .card img{
   height: 100px;
   border-radius: 10px;
