--- a/04-Card_Project/src/index.css
+++ b/04-Card_Project/src/index.css
@@ -17,18 +17,19 @@ body{
 }
 
 .parent{
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background-color: black;
   padding: 30px;
   display: flex;
   align-items: center;
   gap: 30px;
+  flex-wrap: wrap;
 }
 
 .card{
   height: 330px;
-  width: 280px;
+  width: 258px;
   background-color: #fff;
   border-radius: 15px;
   padding: 30px;
